--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "server.js",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "body-parser": "^1.19.0",
     "browserify": "^16.5.1",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.13",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.0",
     "pokedex-promise-v2": "^3.2.0"
   },
