--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "browserify": "^16.5.1",
     "ejs": "^3.1.2",
