--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pokedex-promise-v2": "^3.2.0"
   },
   "devDependencies": {},
