--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bcrypt": "^4.0.1",
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.3",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "browserify": "^16.5.1",
     "connect-flash": "^0.1.1",
@@ -19,7 +20,8 @@
     "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "pokedex-promise-v2": "^3.2.0"
+    "pokedex-promise-v2": "^3.2.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
